--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "express": "^4.18.2",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "eslint": "7.19.0"
   }
